selectFirst가 a._item_thumb_sis14_62 아니면 추출안하도록 수정